# nekro-webchat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: auth.py  config.py  database.py  hub.py  main.py  routes.py  sse_client.py  utils.py  ws.py
data/: webchat.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  LoginPage.jsx  assets.js  auth.js  index.css  main.jsx
nekro_agent_sse_sdk/: client.py
static/: index.html
static/assets/: index-BKXM1eKi.css  index-BZ8s5itU.js  index-nBmKmpdF.js
