[project]
name = "nekro-webchat"
version = "0.1.0"
description = "Standalone web chat client for NekroAgent SSE adapter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0,<0.28.0",
    "h2>=4.1.0",
    "loguru>=0.7.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload --host 127.0.0.1 --port 8765"
